--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>탠이의 이모저모<br />
 						Yaboi Jdog</h1>
-						<p>“마빡을 가르는 정권지르기”</p>
+						<p>“하늘비행사의 정권지르기”</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
