--- a/index.html
+++ b/index.html
@@ -173,7 +173,8 @@
 
 					</div>
 
-				<!-- Footer -->
+					<!--
+				<!- - Footer(Contact Me) - ->
 					<footer id="footer">
 						<section>
 							<form method="post" action="#">
@@ -209,6 +210,7 @@
 								<h3>Email</h3>
 								<p><a href="#">justinkim607@berkeley.edu</a></p>
 							</section>
+						-->
 
 
 							<!-- 공개할지 말지 미정
